# kafka-simulate-rule

./: .gitignore  Makefile  go.mod  go.sum
.opencode/: skills.json
cmd/flowrule/: main.go
config/: config.yaml  rules.yaml
docs/: README.md  development.md
docs/specs/: bytecode-format.md  dsl-syntax.md  ffi-api.md  kafka-semantics.md  memory-management.md  vm-architecture.md
flowrule-spec/: 000-product-vision.md  001-product-requirements.md  002-use-cases.md  003-glossary.md  010-functional-specification.md  020-non-functional-specification.md  030-architecture.md  040-runtime.md  050-compiler.md  060-dsl.md  070-bytecode.md  080-vm.md  090-memory.md  100-networking.md  110-scheduler.md  120-storage.md  130-plugin-abi.md  140-security.md  150-observability.md  160-dashboard.md  170-sdk.md  180-testing.md  190-benchmarks.md  200-roadmap.md  README.md
internal/bytecode/: compile.go  module.go  opcode.go
internal/dsl/: compiler.go  compiler_test.go  lexer.go  lexer_test.go  mapexpr.go  mapexpr_test.go  optimizer.go  optimizer_test.go  parser.go  parser_test.go  token.go
internal/engine/: engine.go  loader.go  (+2 more)
rust/: Cargo.toml
rust/src/: error.rs  ffi.rs  lib.rs
rust/src/bytecode/: consts.rs  dag_table.rs  instruction.rs  mapexpr.rs  mod.rs  opcode.rs  plan.rs  services.rs
rust/src/dsl/: compiler.rs  lexer.rs  mod.rs  optimizer.rs  parser.rs
rust/src/executor/: chunk.rs  context.rs  dag.rs  emit.rs  expr.rs  gate.rs  helpers.rs  map.rs  mod.rs  next.rs  parallel.rs
rust/src/memory/: arena.rs  intern.rs  mod.rs  slab.rs
spec/: bytecode-v1.md
(+58 files in other folders)
