[package]
name = "flowrule-core"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bumpalo = { version = "3", features = ["collections"] }
bytes = "1"
rayon = "1"
boxcar = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
libc = "0.2"
uuid = { version = "1", features = ["v4", "fast-rng"] }
rand = "0.8"
crossbeam-queue = "0.3"
once_cell = "1"
bincode = "1"
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
